--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -1,6 +1,6 @@
 body {
     font-family: "Poppins", sans-serif;
-    background-image: url("../imagens/background.png");
+    background-image: url("../imagens/estatuar.jpg");
     background-size: cover;
 }
 
@@ -15,21 +15,34 @@ body::before {
     backdrop-filter: blur(8px);
 }
 
+
+.titulo-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 0; /* Remove qualquer margem inferior */
+}
+
+.titulo-imagem {
+    max-width: 250px; 
+    height: auto;
+}
+
+
 main {
     display: flex;
     justify-content: center;
-    align-items: center;
-
     min-height: 100vh;
 }
 
-.pokedevs {
+.narutoP {
     display: flex;
     gap: 30px;
     padding: 30px 0;
 }
 
-.cartao-pokedev {
+.cartao-naruto {
     display: none;
     max-width: 360px;
     border-radius: 10px;
@@ -37,25 +50,25 @@ main {
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-.cartao-pokedev.aberto {
+.cartao-naruto.aberto {
     display: block;
 }
 
-.cartao-pokedev img {
-    width: 100%;
-    height: 100%;
+.cartao-naruto img {
+    width: 50%;
+    height: 50%;
     margin-top: 10px;
 }
 
-.cartao-pokedev .cartao-topo {
+.cartao-naruto .cartao-topo {
     padding: 30px 40px 0;
 }
 
-.cartao-pokedev .nome {
+.cartao-naruto .nome {
     margin-bottom: 5px;
 }
 
-.cartao-pokedev .tipo {
+.cartao-naruto .tipo {
     background-color: #ffffff;
     font-size: 12px;
     opacity: 0.7;
@@ -63,14 +76,14 @@ main {
     padding: 2px 10px;
 }
 
-.cartao-pokedev .detalhes {
+.cartao-naruto .detalhes {
     color: #ffffff;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.cartao-pokedev .cartao-informacoes {
+.cartao-naruto .cartao-informacoes {
     background-color: #ffffff;
     display: flex;
     justify-content: space-between;
@@ -80,13 +93,13 @@ main {
     border-bottom-right-radius: 8px;
 }
 
-.cartao-pokedev .cartao-informacoes h3 {
+.cartao-naruto .cartao-informacoes h3 {
     font-size: 20px;
     margin-bottom: 15px;
     border-bottom: 1px solid #6b727a;
 }
 
-.cartao-pokedev .cartao-informacoes .descricao {
+.cartao-naruto .cartao-informacoes .descricao {
     padding: 0 10px;
     font-size: 15px;
     max-height: 150px;
@@ -107,70 +120,70 @@ main {
     color: #fff; /* Cor do texto */
 }
 
-.pokedevs {
+.narutoP {
     margin-top: 2rem; /* Espaçamento entre o título e os cards */
 }
 
 
-.tipo-eletrico {
-    background-color: #fcc719;
-}
-
-.tipo-fogo {
+.tipo-usumaki {
     background-color: #f15000d2;
 }
 
-.tipo-agua {
-    background-color: #015C98;
+.tipo-sasuke {
+    background-color: #015c98c6;
 }
 
-.tipo-grama {
-    background-color: #49D0B0;
+.tipo-sakura {
+    background-color: #c92a84c4;
 }
 
-.tipo-trevas {
-    background-color: #BA68C8;
+.tipo-kakashi {
+    background-color: #595b5ac7;
+}
+
+.tipo-jiraya {
+    background-color: #e83737c8;
 }
 
 .tipo-fada {
-    background-color: #C29791;
+    background-color: #d6eb1ac9;
 }
 
 .listagem {
     max-width: 200px;
 }
 
-.listagem .pokedev img {
-    width: 25%;
+.listagem .naruto img {
+    width: 20%;
 }
 
-.listagem .pokedev {
+.listagem .naruto {
     background-color: #6b727a;
     color: #ffffff;
-
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 5px;
+    padding: 5px;
     margin-bottom: 10px;
     cursor: pointer;
-    border-top-left-radius: 30px;
-    border-bottom-left-radius: 30px;
+   /* border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;*/
+    border-radius: 30px;
     min-height: 70px;
 
     transition: 0.15 ease-in-out;
 }
 
-.listagem .pokedev:hover {
+.listagem .naruto:hover {
     transform: scale(1.05);
 }
 
-.listagem .pokedev span {
+.listagem .naruto span {
     padding-right: 20px;
 }
 
-.listagem .pokedev.ativo {
-    background-color: #fa6668;
+.listagem .naruto.ativo {
+    background-color: #eb6324;
 }
 
 
