--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -42,17 +42,23 @@ main {
     padding: 30px 0;
 }
 
+
 .cartao-naruto {
     display: none;
     max-width: 360px;
     border-radius: 10px;
-
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    box-shadow: 0px 0px 8px #fff;
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.4s, transform 0.4s;
 }
 
 .cartao-naruto.aberto {
     display: block;
+    opacity: 1;
+    transform: translateY(0);
 }
+
 
 .cartao-naruto img {
     width: 50%;
@@ -170,12 +176,12 @@ main {
     border-bottom-left-radius: 30px;*/
     border-radius: 30px;
     min-height: 70px;
-
     transition: 0.15 ease-in-out;
 }
 
 .listagem .naruto:hover {
     transform: scale(1.05);
+    box-shadow: 0px 0px 8px #fff;
 }
 
 .listagem .naruto span {
@@ -184,7 +190,79 @@ main {
 
 .listagem .naruto.ativo {
     background-color: #eb6324;
+    box-shadow: 0px 0px 8px #fff;
 }
+
+.timeline-section {
+    padding: 50px;
+    background-color: #f4f4f4;
+    font-family: 'Arial', sans-serif;
+}
+
+.timeline {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
+
+.timeline::before {
+    content: '';
+    position: absolute;
+    width: 4px;
+    background-color: #333;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.timeline-event {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 45%;
+    margin: 20px 0;
+    position: relative;
+    text-align: center;
+}
+
+.timeline-event::before {
+    content: '';
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    background-color: #333;
+    border-radius: 50%;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.timeline-event img {
+    max-width: 100%;
+    border-radius: 8px;
+    margin-top: 10px;
+}
+
+.event-content {
+    background-color: white;
+    padding: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    margin-top: 10px;
+}
+
+.event-content h3 {
+    margin-top: 0;
+    font-size: 1.5em;
+}
+
+.event-content p {
+    margin-bottom: 0;
+    font-size: 1.1em;
+}
+
 
 
 
